--- a/html/reaction.html
+++ b/html/reaction.html
@@ -12,8 +12,8 @@
     </head>
     <body>
         {% include navigation.html %}
-        <h1>They say a picture is worth a thousand words...</h1>
         <div class="content">
+            <h1>They Say a Picture is Worth a Thousand Words...</h1>
             <div id="imageroll">
             {% assign image_files = site.static_files | where: "image", true %}
             {% for myimage in image_files %}
