Organised style.css, +1 img

--- a/html/audiophile.html
+++ b/html/audiophile.html
@@ -12,30 +12,32 @@
     <body>
         {% include navigation.html %}
         <div class="content">
-            <h1>I Like Quality Audio</h1>
-            <p>You might also enjoy some of the following tracks and audio excerpts:</p>
-            <ul>
-                <li>(Musical) The album 'Mezzanine', by Massive Attack <a href="https://open.spotify.com/album/49MNmJhZQewjt06rpwp6QR?si=0Q_C4BKISbSK2Ivqo7k-Nw">listen on Spotify</a></li>
-                <li>(Musical) The album 'Blue Lines', by Massive Attack <a href="https://open.spotify.com/album/5mAPk4qeNqVLtNydaWbWlf?si=SaLt2eEORxOGqu0HLgDOsg">listen on Spotify</a></li>
-                <li>(Musical) Various tracks by Grimes, particularly from the album 'Visions' <a href="https://open.spotify.com/album/2jXthXcPiAdhatxYPv4yPk?si=vyhK_84JS7yZ3jSvHrW1BQ">listen on Spotify</a></li>
-                <li>(Musical) Supersonic (My Existence), by Skrillex, Noisia, and josh pan <a href="https://open.spotify.com/album/3KpWkFQMXb7sph4xWuHQ5m?si=etbWuHXaRim6HwK_mZLqMg">listen to the single on Spotify</a></li>
-                <li>(Musical) The album '10,000 Days', by TOOL <a href="https://open.spotify.com/album/1fvWYcbjuycyHpzNPH1Vfk?si=ZIaZ9YSuTWy9tWKFOC-mJw">listen on Spotify</a></li>
-                <li>(Musical) The album 'Fear Inoculum', by TOOL <a href="https://open.spotify.com/album/7acEciVtnuTzmwKptkjth5?si=02935b31e0c6404b">listen on Spotify</a></li>
-                <li>(Musical) The album 'Lateralus', by TOOL <a href="https://open.spotify.com/album/5l5m1hnH4punS1GQXgEi3T?si=eb0b85f036054839">listen on Spotify</a></li>
-                <li>(Musical) The album 'Nightshade', by Hotel Pools <a href="https://open.spotify.com/album/45ac8N9BQaKuxKYv2OZhvV?si=FX6dDOiCQdmXmV_OA7Cucg">listen on Spotify</a></li>
-                <li>(Cinematic) The Astartes Project, by Syama Pedersen <a href="https://youtu.be/O7hgjuFfn3A"> listen on YouTube</a></li>
-                <li>(Musical/Cinematic) Elite: Dangerous' OST, by Erasmus Talbot <a href="https://open.spotify.com/album/7DiKsmM1Ekr9mWYxRCMjrE?si=lrgnji4KRMG6r9POxjBxUQ">listen on Spotify</a></li>
-                <li>(Other) Radiohead's 'Pyramid Song', slowed by 800% <a href="https://youtu.be/XiKWfcy-Z70">listen on YouTube</a></li>
-                <!-- <li><a href=""></a> link</li> -->
-            </ul>
-            <h2>My Audio Setup</h2>
-            <ul>
-                <li>Primary Headphones: Beyertronic DT 1990 Pro</li>
-                <li>Digital-to-Analogue Conver (DAC): FiiO E10k</li>
-                <li>Casual Headphones: Bose QC35 (the old ones, not the IIs)</li>
-                <li>In-Ear Wireless: Anker Soundcore Life Dot 2</li>
-                <li>Monitors: KRK Rokit 5 x2</li>
-            </ul>
+            <div class="two-thirds-container">
+                <h1>I Like Quality Audio</h1>
+                <p>You might also enjoy some of the following tracks and audio excerpts:</p>
+                <ul>
+                    <li>The album 'Mezzanine', by Massive Attack <a href="https://open.spotify.com/album/49MNmJhZQewjt06rpwp6QR?si=0Q_C4BKISbSK2Ivqo7k-Nw">listen on Spotify</a></li>
+                    <li>The album 'Blue Lines', by Massive Attack <a href="https://open.spotify.com/album/5mAPk4qeNqVLtNydaWbWlf?si=SaLt2eEORxOGqu0HLgDOsg">listen on Spotify</a></li>
+                    <li>Various tracks by Grimes, particularly from the album 'Visions' <a href="https://open.spotify.com/album/2jXthXcPiAdhatxYPv4yPk?si=vyhK_84JS7yZ3jSvHrW1BQ">listen on Spotify</a></li>
+                    <li>Supersonic (My Existence), by Skrillex, Noisia, and josh pan <a href="https://open.spotify.com/album/3KpWkFQMXb7sph4xWuHQ5m?si=etbWuHXaRim6HwK_mZLqMg">listen on Spotify</a></li>
+                    <li>The album '10,000 Days', by TOOL <a href="https://open.spotify.com/album/1fvWYcbjuycyHpzNPH1Vfk?si=ZIaZ9YSuTWy9tWKFOC-mJw">listen on Spotify</a></li>
+                    <li>The album 'Fear Inoculum', by TOOL <a href="https://open.spotify.com/album/7acEciVtnuTzmwKptkjth5?si=02935b31e0c6404b">listen on Spotify</a></li>
+                    <li>The album 'Lateralus', by TOOL <a href="https://open.spotify.com/album/5l5m1hnH4punS1GQXgEi3T?si=eb0b85f036054839">listen on Spotify</a></li>
+                    <li>The album 'Nightshade', by Hotel Pools <a href="https://open.spotify.com/album/45ac8N9BQaKuxKYv2OZhvV?si=FX6dDOiCQdmXmV_OA7Cucg">listen on Spotify</a></li>
+                    <li>The Astartes Project, by Syama Pedersen <a href="https://youtu.be/O7hgjuFfn3A"> listen on YouTube</a></li>
+                    <li>Elite: Dangerous' OST, by Erasmus Talbot <a href="https://open.spotify.com/album/7DiKsmM1Ekr9mWYxRCMjrE?si=lrgnji4KRMG6r9POxjBxUQ">listen on Spotify</a></li>
+                    <li>Radiohead's 'Pyramid Song', slowed by 800% <a href="https://youtu.be/XiKWfcy-Z70">listen on YouTube</a></li>
+                    <!-- <li><a href=""></a> link</li> -->
+                </ul>
+                <h2>My Audio Setup</h2>
+                <ul>
+                    <li>Primary Headphones: Beyertronic DT 1990 Pro</li>
+                    <li>Digital-to-Analogue Conver (DAC): FiiO E10k</li>
+                    <li>Casual Headphones: Bose QC35 (the old ones, not the IIs)</li>
+                    <li>In-Ear Wireless: Anker Soundcore Life Dot 2</li>
+                    <li>Monitors: KRK Rokit 5 x2</li>
+                </ul>
+            </div>
         </div>
         {% include footer.html %}
     </body>
