--- a/html/contact.html
+++ b/html/contact.html
@@ -12,11 +12,13 @@
     <body>
         {% include navigation.html %}
         <div class="content">
-            <h1>Need to get in touch?</h1>
-            <ul>
-                <li>Email: elliott.huge@gmail.com</li>
-                <li>Linkedin: <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a></li>
-            </ul>
+            <div class="two-thirds-container">
+                <h1>Need to get in touch?</h1>
+                <ul>
+                    <li>Email: elliott.huge@gmail.com</li>
+                    <li>Linkedin: <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a></li>
+                </ul>
+            </div>
         </div>
         {% include footer.html %}
     </body>
