--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,12 @@
     <body>
         {% include navigation.html %}
         <div class="content">
-            <h1>Home</h1>
-            <p>Hi; welcome</p>
-            <h2>and... Bingo</h2>
-            <p>elliotthuge.dev now successfully lands here!</p>
+            <div class="two-thirds-container">
+                <h1>Home</h1>
+                <p>Hi; welcome</p>
+                <h2>and... Bingo</h2>
+                <p>elliotthuge.dev now successfully lands here!</p>
+            </div>
         </div>
         {% include footer.html %}
     </body>
