--- a/html/projects.html
+++ b/html/projects.html
@@ -12,26 +12,28 @@
     <body>
         {% include navigation.html %}
         <div class="content">
-            <h1>Projects, Big and Small</h1>
-            <h2>Tick Detector</h2>
-            <p>
-                <i>Python</i><br>
-                Text about the <a href="https://github.com/PilotsTradeNetwork/TickDetector">tick detector project</a> (1 week, incomplete).
-            </p>
-            <h2>Recursive Change Calculator</h2>
-            <p>
-                <i>Python</i><br>
-                Text about the recursive <a href="https://github.com/elliott-huge/ChangeCalculator"> change calculator mini-project</a> (1 day).
-            </p>
-            <h2>This Website!</h2>
-            <p>
-                <i>HTML 5 & CSS (JavaScript coming Soon)</i><br>
-                Text about <a href="https://github.com/elliott-huge/elliott-huge.github.io">this website</a>, 
-                how long it's taken, etc. (2 days so far, 
-                including trying to get 
-                <a href="https://stackoverflow.com/questions/69683024/html-from-includes-not-showing-where-included-using-jekyll">
-                    Jekyll working</a>).
-            </p>
+            <div class="two-thirds-container">
+                <h1>Projects, Big and Small</h1>
+                <h2>Tick Detector</h2>
+                <p>
+                    <i>Python</i><br>
+                    Text about the <a href="https://github.com/PilotsTradeNetwork/TickDetector">tick detector project</a> (1 week, incomplete).
+                </p>
+                <h2>Recursive Change Calculator</h2>
+                <p>
+                    <i>Python</i><br>
+                    Text about the recursive <a href="https://github.com/elliott-huge/ChangeCalculator"> change calculator mini-project</a> (1 day).
+                </p>
+                <h2>This Website!</h2>
+                <p>
+                    <i>HTML 5 & CSS (JavaScript coming Soon)</i><br>
+                    Text about <a href="https://github.com/elliott-huge/elliott-huge.github.io">this website</a>, 
+                    how long it's taken, etc. (2 days so far, 
+                    including trying to get 
+                    <a href="https://stackoverflow.com/questions/69683024/html-from-includes-not-showing-where-included-using-jekyll">
+                        Jekyll working</a>).
+                </p>
+            </div>
         </div>
         {% include footer.html %}
     </body>
