--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
         <meta name="description" content="A page where Elliott's contact details can be found."/>
