--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
         <meta name="description" content="This is a homepage on a personal website for exercising web-development skills, demonstrating my previous work, and provide a blank canvas for web-based project."/>
