--- a/html/reaction.html
+++ b/html/reaction.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.ico"/>
         <link rel="stylesheet" href="../css/style.css"/>
         <meta name="description" content="A collection of reaction images are here."/>
