styling changes, added one third column to index

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
-        <meta name="description" content="This is a homepage on a personal website for exercising web-development skills, demonstrating my previous work, and provide a blank canvas for web-based project."/>
+        <meta name="description" content="A personal website for exercising web-development skills"/>
         <title>Elliott H.</title>
     </head>
     <body>
@@ -15,9 +15,25 @@
             {% include navigation.html %}
             <div class="two-thirds-container">
                 <h1>Home</h1>
-                <p>Hi; welcome</p>
-                <h2>and... Bingo</h2>
-                <p>elliotthuge.dev now successfully lands here!</p>
+                <p>
+                    Hi; welcome to elliotthuge.dev. Feel free to browse this site to your heart's content.
+                </p>
+                <h2>Look familiar?</h2>
+                <p>
+                    You may find aspects of this website familiar, that is because it is based on the UK Government Design Service's (GDS) design system.
+                </p>
+                <p>
+                    You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
+                </p>
+            </div>
+            <div class="one-third-container">
+                <div class="related-content-block">
+                    <h2>Latest Content</h2>
+                    <ul>
+                        <li><a href="/html/projects/this_website">The rationale behind this website's design</a></li>
+                        <li><a href="/html/reaction">A collection of reaction images</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         {% include footer.html %}
