--- a/html/projects.html
+++ b/html/projects.html
@@ -25,7 +25,7 @@
                     <i>Python</i><br>
                     Text about the recursive <a href="https://github.com/elliott-huge/ChangeCalculator"> change calculator mini-project</a> (1 day).
                 </p>
-                <h2>This Website!</h2>
+                <h2><a href="/html/projects/this_website">This Website!</a></h2>
                 <p>
                     <i>HTML 5 & CSS (JavaScript coming Soon)</i><br>
                     Text about <a href="https://github.com/elliott-huge/elliott-huge.github.io">this website</a>, 
