--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 ---
 ---
-<meta http-equiv="refresh" content="0; url=https://elliott-huge.github.io/html/index.html">
+<meta http-equiv="refresh" content="0; url=https://elliott-huge.github.io/html/index">
