restructuring text blocks, updated page desc'

--- a/html/contact.html
+++ b/html/contact.html
@@ -7,17 +7,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
-        <meta name="description" content="A page where Elliott's contact details can be found."/>
-        <title>Elliott - Contact</title>
+        <meta name="description" content="Get Elliott's contact details"/>
+        <title>Contact Elliott</title>
     </head>
     <body>
         <div class="content">
             {% include navigation.html %}
             <div class="two-thirds-container">
-                <h1>Need to get in touch?</h1>
-                <ul>
-                    <li>Linkedin: <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a></li>
-                </ul>
+                <div class="text-content-block">
+                    <h1>Need to get in touch?</h1>
+                    <ul>
+                        <li>Linkedin: <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         {% include footer.html %}
