--- a/html/index.html
+++ b/html/index.html
@@ -7,24 +7,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
-        <meta name="description" content="A personal website for exercising web-development skills"/>
+        <meta name="description" content="Elliott Hughes' personal website"/>
         <title>Elliott H.</title>
     </head>
     <body>
         <div class="content">
             {% include navigation.html %}
             <div class="two-thirds-container">
-                <h1>Home</h1>
-                <p>
-                    Hi; welcome to elliotthuge.dev. Feel free to browse this site to your heart's content.
-                </p>
-                <h2>Look familiar?</h2>
-                <p>
-                    You may find aspects of this website familiar, that is because it is based on the UK Government Design Service's (GDS) design system.
-                </p>
-                <p>
-                    You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
-                </p>
+                <div class="text-content-block">
+                    <h1>Home</h1>
+                    <p>
+                        Hi; welcome to elliotthuge.dev. Feel free to browse this site to your heart's content.
+                    </p>
+                    <h2>Look familiar?</h2>
+                    <p>
+                        You may find aspects of this website familiar, that is because it is based on the UK Government Design Service's (GDS) design system.
+                    </p>
+                    <p>
+                        You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
+                    </p>
+                </div>
             </div>
             <div class="one-third-container">
                 <div class="related-content-block">
