--- a/html/projects/this_website.html
+++ b/html/projects/this_website.html
@@ -14,11 +14,11 @@
         <div class="content">
             {% include navigation.html %}
             <div class="two-thirds-container">
-                <h1><a href="blah.com">blah</a></h1>
-                <h2><a href="blah.com">blah</a></h2>
-                <p>
-
-                </p>
+                <div class="text-content-block">
+                    <p>
+                        This page is under construction.
+                    </p>
+                </div>
             </div>
         </div>
         {% include footer.html %}
