Added content to 'this website'

--- a/html/projects/this_website.html
+++ b/html/projects/this_website.html
@@ -15,8 +15,28 @@
             {% include navigation.html %}
             <div class="two-thirds-container">
                 <div class="text-content-block">
+                    <h1>Why take inspiration from the UK Government for website design?</h1>
                     <p>
-                        This page is under construction.
+                        The Government Design Service (GDS) - along with all public-sector design teams - are uniquely placed teams in the world of interaction design:
+                    </p>
+                    <ul>
+                        <li>They are unlikely to abuse 'Dark Patterns' (<a href="https://blog.mozilla.org/en/internet-culture/mozilla-explains/deceptive-design-patterns/">you can read about deceptive design on mozilla.org</a>) since their organisation is not oriented around profit.*</li>
+                        <li>Usability and accessibility for end users are some of their employer's Key Performance Indicators (KPIs) instead of an afterthought.</li>
+                        <li>Due to the many faceted functions of government, their work is interdisciplinary and therefore likely to be applicable in various contexts.</li>
+                        <li>They have a unique opportunity to spend time conducting design research, where the private sector might prefer to rush an artefact to production.</li>
+                    </ul>
+                    <p>
+                        *<i>You could argue that HMRC is 'profit-seeking'.</i>
+                    </p>
+                    <h2>Okay, but why for your personal site?</h2>
+                    <p>
+                        <i>Imitation is the highest form of flattery, I suppose...</i>
+                    </p>
+                    <p>
+                        Getting a website to be usable is a high priority for me; taking inspiration from the GDS' design system gives this website a solid foundation to build upon.
+                    </p>
+                    <p>
+                        From an interface design perspective, it is also a great opportunity to explore the design thinking and implementation details behind usable website components.
                     </p>
                 </div>
             </div>
