Flattened html hierarchy bc footer images broke

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
                 <div class="related-content-block">
                     <h2>Latest Content</h2>
                     <ul>
-                        <li><a href="/html/projects/this_website">The rationale behind this website's design</a></li>
+                        <li><a href="/html/this_website">The rationale behind this website's design</a></li>
                         <li><a href="/html/reaction">A collection of reaction images</a></li>
                     </ul>
                 </div>
