--- a/html/projects.html
+++ b/html/projects.html
@@ -26,14 +26,10 @@
                         <i>Python</i><br>
                         Text about the recursive <a href="https://github.com/elliott-huge/ChangeCalculator"> change calculator mini-project</a> (1 day).
                     </p>
-                    <h2><a href="/html/projects/this_website">This Website!</a></h2>
+                    <h2><a href="/html/this_website">This Website!</a></h2>
                     <p>
-                        <i>HTML 5 & CSS (JavaScript coming Soon)</i><br>
-                        Text about <a href="https://github.com/elliott-huge/elliott-huge.github.io">this website</a>, 
-                        how long it's taken, etc. (2 days so far, 
-                        including trying to get 
-                        <a href="https://stackoverflow.com/questions/69683024/html-from-includes-not-showing-where-included-using-jekyll">
-                            Jekyll working</a>).
+                        <i>HTML & CSS (JavaScript coming Soon)</i><br>
+                        In the interests of usability, this website was designed by taking inspiration from the UK Government Design Service.
                     </p>
                 </div>
             </div>
