--- a/html/this_website.html
+++ b/html/this_website.html
@@ -5,9 +5,9 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../../res/icon.png"/>
-        <link rel="stylesheet" href="../../css/style.css"/>
-        <meta name="description" content="How this website is being designed, built, and hosted."/>
+        <link rel="icon" href="../res/icon.png"/>
+        <link rel="stylesheet" href="../css/style.css"/>
+        <meta name="description" content="Why copy the government?"/>
         <title>Projects: This Website</title>
     </head>
     <body>
