content to projects page

--- a/html/projects.html
+++ b/html/projects.html
@@ -16,20 +16,20 @@
             <div class="two-thirds-container">
                 <div class="text-content-block">
                     <h1>Projects, Big and Small</h1>
-                    <h2>Tick Detector</h2>
-                    <p>
-                        <i>Python</i><br>
-                        Text about the <a href="https://github.com/PilotsTradeNetwork/TickDetector">tick detector project</a> (1 week, incomplete).
-                    </p>
-                    <h2>Recursive Change Calculator</h2>
-                    <p>
-                        <i>Python</i><br>
-                        Text about the recursive <a href="https://github.com/elliott-huge/ChangeCalculator"> change calculator mini-project</a> (1 day).
-                    </p>
                     <h2><a href="/html/this_website">This Website!</a></h2>
                     <p>
-                        <i>HTML & CSS (JavaScript coming Soon)</i><br>
-                        In the interests of usability, this website was designed by taking inspiration from the UK Government Design Service.
+                        <i>HTML & CSS (JavaScript still to come)</i> - Ongoing<br>
+                        In the interests of usability, this website is designed by taking inspiration from the UK Government Design Service.
+                    </p>
+                    <h2><a href="https://www.bluebelllane.co.uk/">Bluebell Lane Floristry (external link to bluebelllane.co.uk)</a></h2>
+                    <p>
+                        <i>Adobe Illustrator, HTML, CSS, and Javascript</i> - April 2022<br>
+                        A local florist was in need of a simple static website to help showcase her business.
+                    </p>
+                    <h2><a href="https://github.com/elliott-huge/ChangeCalculator">Recursive Change Calculator (external link to Github repo')</a></h2>
+                    <p>
+                        <i>Python</i> - October 2021<br>
+                        A small experiment a recursive loop to find coins that sum to an exact value - probably quite inefficient!
                     </p>
                 </div>
             </div>
