update to reaction

--- a/html/this_website.html
+++ b/html/this_website.html
@@ -17,7 +17,7 @@
                 <div class="text-content-block">
                     <h1>Why take inspiration from the UK Government for website design?</h1>
                     <p>
-                        The Government Design Service (GDS) - along with all public-sector design teams - are uniquely placed teams in the world of interaction design:
+                        The Government Design Service (GDS) - along with all public-sector design teams - are uniquely placed in the world of interaction design:
                     </p>
                     <ul>
                         <li>They are unlikely to abuse 'Dark Patterns' (<a href="https://blog.mozilla.org/en/internet-culture/mozilla-explains/deceptive-design-patterns/">you can read about deceptive design on mozilla.org</a>) since their organisation is not oriented around profit.*</li>
