--- a/html/audiophile.html
+++ b/html/audiophile.html
@@ -34,7 +34,7 @@
                     <h2>My Audio Setup</h2>
                     <ul>
                         <li>Primary Headphones: Beyertronic DT 1990 Pro</li>
-                        <li>Digital-to-Analogue Conver (DAC): FiiO E10k</li>
+                        <li>Digital-to-Analogue Converter (DAC): FiiO E10k</li>
                         <li>Casual Headphones: Bose QC35 (the old ones, not the IIs)</li>
                         <li>In-Ear Wireless: Anker Soundcore Life Dot 2</li>
                         <li>Monitors: KRK Rokit 5 x2</li>
