--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
                     <h2>Latest Content</h2>
                     <ul>
                         <li><a href="/html/this_website">The rationale behind this website's design</a></li>
-                        <li><a href="/html/reaction">A collection of reaction images</a></li>
+                        <li><a href="/html/recipe-carbonara">A recipe for making Carbonara</a></li>
                     </ul>
                 </div>
             </div>
