recipe amendments Carbo

--- a/html/recipe-carbonara.html
+++ b/html/recipe-carbonara.html
@@ -55,28 +55,31 @@
                         1. Add the spaghetti to a pan of boiling water with a pinch of salt. Set a timer for 8-9mins, and stir occasionally to prevent the pasta sticking together.
                     </p>
                     <p>
-                        2. Finely grate all of the Parmigiano, then weigh 30g of it into a container suitable for egg-beating. The remaining 20g is for serving.
+                        2. Peel and finely chop/slice the garlic cloves then set aside.
                     </p>
                     <p>
-                        3. Break the eggs - yolk and white - in with the 30g of Parmigiano and some ground pepper. Beat this mixture with a fork until thoroughly mixed.
+                        3. Finely grate all of the Parmigiano, then weigh 30g of it into a container suitable for egg-beating. The remaining 20g is for serving.
                     </p>
                     <p>
-                        4. With about ~5-6 mins remaining on the timer, cook the bacon on a medium heat frying-pan til lightly golden. Ensure this frying-pan is big enough to hold all of the pasta, bacon, and cheese/egg mixture.
+                        4. Break the eggs - yolk and white - in with the 30g of Parmigiano and some ground pepper. Beat this mixture with a fork until thoroughly mixed.
                     </p>
                     <p>
-                        5. With the bacon cooked and the timer (hopefully) still going, take the frying-pan off of the heat and remove the bacon.<br>This is your opportunity to cut up the bacon into smaller pieces if you aren't using lardons.
+                        5. With about ~5-6 mins remaining on the timer, cook the bacon on a medium heat frying-pan til lightly golden. Ensure this frying-pan is big enough to hold all of the pasta, bacon, and cheese/egg mixture.
                     </p>
                     <p>
-                        6. When the timer ends, ensure the pan is still well-oiled and quite hot, but not searing. Strain the pasta almost completely then add it to the frying-pan. Begin stirring and folding the pasta actively to soak it in oil and bacon residue.
+                        6. With the bacon cooked and the timer (hopefully) still going, take the frying-pan off of the heat, remove the bacon, and add the garlic.<br>This is your opportunity to cut up the bacon into smaller pieces if you aren't using lardons.
                     </p>
                     <p>
-                        7. Add the bacon & the egg-cheese mixture into the frying-pan with the pasta, taking care not to let the mixture begin to fry. You will be able tell when this is happening because the mixture will stick to the pan, and lets off a pungent eggy smell.
+                        7. When the timer ends, ensure the pan is still well-oiled and quite hot, but not searing. Strain the pasta almost completely then add it to the frying-pan. Begin stirring and folding the pasta actively to soak it in oil, sizzling garlic, and bacon residue.
                     </p>
                     <p>
-                        8. Continue to stir and fold the mixture until well-heated through and of a desired consistency, the dish should be steaming hot.
+                        8. Add the bacon & the egg-cheese mixture into the frying-pan with the pasta, taking care not to let the mixture begin to fry. You will be able tell when this is happening because the mixture will stick to the pan and let off a pungent omelette smell.
                     </p>
                     <p>
-                        8. Serve into plates with pepper and the remaining Parmigiano.
+                        9. Continue to stir and fold the mixture until well-heated through and of a desired consistency, the dish should be steaming hot.
+                    </p>
+                    <p>
+                        10. Serve with pepper and the remaining Parmigiano.
                     </p>
                 </div>
             </div>
