Various css & content changes

--- a/html/contact.html
+++ b/html/contact.html
@@ -15,9 +15,11 @@
             {% include navigation.html %}
             <div class="two-thirds-container">
                 <div class="text-content-block">
-                    <h1>Need to get in touch?</h1>
+                    <h1>Contact</h1>
+                    <h2>Need to get in touch?</h2>
                     <ul>
                         <li>Linkedin: <a href="https://www.linkedin.com/in/elliott-huge">elliott-huge</a></li>
+                        <li>Github: <a href="https://github.com/elliott-huge">elliott-huge</a></li>
                     </ul>
                 </div>
             </div>
