--- a/html/index.html
+++ b/html/index.html
@@ -17,11 +17,11 @@
                 <div class="text-content-block">
                     <h1>Home</h1>
                     <p>
-                        Hi; welcome to elliotthuge.dev. Feel free to browse this site to your heart's content.
+                        Welcome to elliotthuge.dev. Feel free to browse this site to your heart's content.
                     </p>
                     <h2>Look familiar?</h2>
                     <p>
-                        You may find aspects of this website familiar, that is because it is based on the UK Government Design Service's (GDS) design system.
+                        You may find aspects of this website familiar, that is because it is based on the UK Government Design Service's (GDS) design system.<br>
                     </p>
                     <p>
                         You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
