--- a/html/this_website.html
+++ b/html/this_website.html
@@ -15,9 +15,10 @@
             {% include navigation.html %}
             <div class="two-thirds-container">
                 <div class="text-content-block">
-                    <h1>Why take inspiration from the UK Government for website design?</h1>
+                    <h1>This Website</h1>
+                    <h2>Why take inspiration from the UK Government for website design?</h2>
                     <p>
-                        The Government Design Service (GDS) - along with all public-sector design teams - are uniquely placed in the world of interaction design:
+                        The Government Design Service (GDS) - along with all public-sector design teams - are uniquely positioned in the world of interaction design:
                     </p>
                     <ul>
                         <li>They are unlikely to abuse 'Dark Patterns' (<a href="https://blog.mozilla.org/en/internet-culture/mozilla-explains/deceptive-design-patterns/">you can read about deceptive design on mozilla.org</a>) since their organisation is not oriented around profit.*</li>
@@ -38,6 +39,16 @@
                     <p>
                         From an interface design perspective, it is also a great opportunity to explore the design thinking and implementation details behind usable website components.
                     </p>
+                    <h2>There's something else...</h2>
+                    <p>
+                        Yep. While purely coincidence, this site has similar motives (and appearance) to these satirical websites:
+                    </p>
+                    <ul>
+                        <li><a href="">Motherf***ing Website</a></li>
+                        <li><a href="">Better Motherf***ing Website</a></li>
+                        <li><a href="">The Best Motherf***ing Website</a></li>
+                        <li><a href="">Perfect Motherf***cking Wesbite</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
