--- a/html/audiophile.html
+++ b/html/audiophile.html
@@ -15,7 +15,8 @@
             {% include navigation.html %}
             <div class="two-thirds-container">
                 <div class="text-content-block">
-                    <h1>I Like Quality Audio</h1>
+                    <h1>Audio</h1>
+                    <h2>I like quality audio</h2>
                     <p>You might also enjoy some of the following tracks and audio excerpts:</p>
                     <ul>
                         <li>The album 'Mezzanine', by Massive Attack <a href="https://open.spotify.com/album/49MNmJhZQewjt06rpwp6QR?si=0Q_C4BKISbSK2Ivqo7k-Nw">listen on Spotify</a></li>
@@ -31,7 +32,7 @@
                         <li>Radiohead's 'Pyramid Song', slowed by 800% <a href="https://youtu.be/XiKWfcy-Z70">listen on YouTube</a></li>
                         <!-- <li><a href=""></a> link</li> -->
                     </ul>
-                    <h2>My Audio Setup</h2>
+                    <h2>My audio setup</h2>
                     <ul>
                         <li>Primary Headphones: Beyertronic DT 1990 Pro</li>
                         <li>Digital-to-Analogue Converter (DAC): FiiO E10k</li>
