Changed nav to be more banner-like

--- a/html/index.html
+++ b/html/index.html
@@ -17,11 +17,16 @@
                 <div class="text-content-block">
                     <h1>Home</h1>
                     <p>
-                        Welcome to elliotthuge.dev. Feel free to browse this site to your heart's content.
+                        Welcome to Elliott's personal site, elliotthuge.dev.
+                    </p>
+                    <h2>Who is Elliott?</h2>
+                    <p>
+                        I'm a Computer Scientist currently working as a User Experience Designer.<br>
+                        I have a passion for interaction design - a subset of UX design - which involves designing things with usability and accessibility in mind.
                     </p>
                     <h2>Look familiar?</h2>
                     <p>
-                        You may find aspects of this website familiar, that is because it is based on the UK Government Design Service's (GDS) design system.<br>
+                        Aspects of this website may feel familiar, that is because the site is loosely based on the UK Government Design Service's (GDS) design system.<br>
                     </p>
                     <p>
                         You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
