a:active black & yellow

--- a/html/projects.html
+++ b/html/projects.html
@@ -15,7 +15,7 @@
             {% include navigation.html %}
             <div class="two-thirds-container">
                 <div class="text-content-block">
-                    <h1>Projects, Big and Small</h1>
+                    <h1>Projects</h1>
                     <h2><a href="/html/this_website">This Website!</a></h2>
                     <p>
                         <i>HTML & CSS (JavaScript still to come)</i> - Ongoing<br>
