--- a/html/this_website.html
+++ b/html/this_website.html
@@ -47,7 +47,7 @@
                         <li><a href="">Motherf***ing Website</a></li>
                         <li><a href="">Better Motherf***ing Website</a></li>
                         <li><a href="">The Best Motherf***ing Website</a></li>
-                        <li><a href="">Perfect Motherf***cking Wesbite</a></li>
+                        <li><a href="">Perfect Motherf***cking Website</a></li>
                     </ul>
                 </div>
             </div>
