--- a/html/projects.html
+++ b/html/projects.html
@@ -26,7 +26,12 @@
                         <i>Adobe Illustrator, HTML, CSS, and Javascript</i> - April 2022<br>
                         A local florist was in need of a simple static website to help showcase her business.
                     </p>
-                    <h2><a href="https://github.com/elliott-huge/ChangeCalculator">Recursive Change Calculator (external link to Github repo')</a></h2>
+                    <h2><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for Mat-dp Core (external link to hosted MkDocs site)</a></h2>
+                    <p>
+                        <i>MarkDown, Python, Linear Programming</i> - March 2022<br>
+                        Mat-dp Core is an open-source linear programming library designed to support the research of optimal resource allocation in the context of environmental effects, such as greenhouse gas production.
+                    </p>
+                    <h2><a href="https://github.com/elliott-huge/ChangeCalculator">Recursive Change Calculator (external link to Github)</a></h2>
                     <p>
                         <i>Python</i> - October 2021<br>
                         A small experiment a recursive loop to find coins that sum to an exact value - probably quite inefficient!
